--- a/src/app/clientside/clientpages/subcategory/subcategory.component.html
+++ b/src/app/clientside/clientpages/subcategory/subcategory.component.html
@@ -9,16 +9,16 @@
           </ul>
           <div class="col-md-3" style="float: left;">
             <!--  *** MENUS AND FILTERS ***-->
-            <div class="card sidebar-menu">
-                <div class="card-header">
-                    <h5 class="mb-0 text-uppercase">Groceries</h5>
+            <div class="card sidebar-menu" style="box-shadow:none !important">
+                <div class="card-header p-3">
+                    <h5 class="mb-0 text-uppercase block-title">Groceries</h5>
                 </div>
 
-                <div class="card-body">
-                  <div id="accordion" role="tablist" class="mb-5">
+                <div class="card-body py-0">
+                  <div id="accordion" role="tablist" class="mb-3">
                     <!-- <jw-pagination [items]="Catg_Master" (changePage)="onChangePage($event)"></jw-pagination> -->
-                    <div class="card" *ngFor="let notification of Catg_Master; let i=index;" >
-                      <div class="card-header sortable" id="headingOne" (click)="SubCategoryList(notification.Catg_ID,i)">
+                    <div class="card" *ngFor="let notification of Catg_Master; let i=index;" style="box-shadow:none !important">
+                      <div class="card-header py-1 px-0 sortable catname" id="headingOne" (click)="SubCategoryList(notification.Catg_ID,i)">
                               {{ notification.Catg_Name }}
                       </div>
                   </div>
@@ -26,13 +26,13 @@
                 </div>
             </div>
 
-            <div class="card sidebar-menu" >
-              <div class="card-header d-flex align-items-center justify-content-between">
-                  <h5 class="mb-0 text-uppercase">Filter </h5>
+            <div class="card sidebar-menu" style="box-shadow:none !important">
+              <div class="card-header p-3 d-flex align-items-center justify-content-between">
+                  <h5 class="mb-0 text-uppercase block-title">Filter </h5>
 
               </div>
               <!-- <hr/> -->
-              <div class="card-body" *ngIf="IsSubCategory">
+              <div class="card-body py-0" *ngIf="IsSubCategory">
                   <form>
                       <div class="form-group mb-1" *ngFor="let scat of Sub_Catg_Master;">
                           <div class="custom-control custom-checkbox">
@@ -43,16 +43,16 @@
                       <!-- <button class="btn btn-outline-secondary btn-sm mt-3" (click)="GetGetitemByFilterType('Brand')" ><i class="fa fa-pencil"></i> Apply</button> -->
                   </form>
               </div>
-              <div *ngIf="!IsSubCategory" class="text-small text-left m-l-10">
-                <span style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Filter not available</span>
+              <div *ngIf="!IsSubCategory" class="card-body py-0 text-small text-left mb-3">
+                <span class="card-header py-1 px-0" style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Filter not available</span>
               </div>
           </div>
 
-            <div class="card sidebar-menu">
-                <div class="card-header d-flex align-items-center justify-content-between">
-                    <h5 class="mb-0 text-uppercase">Brands </h5><a  (click)="ClearbrandFilter(Sub_Catg_Master.length > 0 ? 'Y' : 'N')" class="btn btn-sm btn-danger pull-right" style="color: white;"><i class="fa fa-times-circle"></i><span class="d-none d-lg-inline-block" style="color: white;" >Clear</span></a>
+            <div class="card sidebar-menu" style="box-shadow:none !important">
+                <div class="card-header p-3 d-flex align-items-center justify-content-between">
+                    <h5 class="mb-0 text-uppercase block-title">Brands <a *ngIf="BrandMaster_ != null && BrandMaster_.length > 0" (click)="ClearbrandFilter(Sub_Catg_Master.length > 0 ? 'Y' : 'N')" class="btn btn-sm btn-danger pull-right p-0" style="color: white;"><i class="fa fa-times-circle"></i><span class="d-none d-lg-inline-block m-0" style="color: white;" ><small>Clear</small></span></a></h5>
                 </div>
-                <div class="card-body">
+                <div class="card-body py-0">
                     <form>
                         <div class="form-group mb-1" *ngFor="let Brand of BrandMaster_;">
                             <div class="custom-control custom-checkbox">
@@ -65,11 +65,11 @@
                 </div>
             </div>
 
-            <div class="card sidebar-menu">
-              <div class="card-header d-flex align-items-center justify-content-between">
-                  <h5 class="mb-0 text-uppercase">Type </h5><a (click)="ClearTypeFilter(Sub_Catg_Master.length > 0 ? 'Y' : 'N')" class="btn btn-sm btn-danger pull-right" style="color: white;"><i class="fa fa-times-circle"></i><span class="d-none d-lg-inline-block" style="color: white;">Clear</span></a>
+            <div class="card sidebar-menu" style="box-shadow:none !important">
+              <div class="card-header p-3 d-flex align-items-center justify-content-between">
+                  <h5 class="mb-0 text-uppercase block-title">Type <a *ngIf="TypeMaster_ != null && TypeMaster_.length > 0" (click)="ClearTypeFilter(Sub_Catg_Master.length > 0 ? 'Y' : 'N')" class="btn btn-sm btn-danger pull-right p-0" style="color: white;"><i class="fa fa-times-circle"></i><span class="d-none d-lg-inline-block m-0" style="color: white;"><small>Clear</small></span></a></h5>
               </div>
-              <div class="card-body">
+              <div class="card-body py-0">
                   <form>
                       <div class="form-group mb-1" *ngFor="let Type_ of TypeMaster_;">
                           <div class="custom-control custom-checkbox">
@@ -82,17 +82,17 @@
               </div>
           </div>
 
-          <div class="card sidebar-menu m-b-70">
-            <div class="card-header d-flex align-items-center justify-content-between">
-                <h5 class="mb-0 text-uppercase">Price</h5>
+          <div class="card sidebar-menu m-b-70" style="box-shadow:none !important">
+            <div class="card-header p-3 d-flex align-items-center justify-content-between">
+                <h5 class="mb-0 text-uppercase block-title">Price</h5>
             </div>
-            <div class="card-body">
+            <div class="card-body pt-2">
                   <ng5-slider [(value)]="minPrice" [(highValue)]="maxPrice" [options]="options" (mouseleave)="GetItemsByPriceFilter()"></ng5-slider>
                   <!-- <input type="text" [(ngModel)]="minPrice" (keypress)="GetItemsByPriceFilter()">  <input type="text" [(ngModel)]="maxPrice" (keypress)="GetItemsByPriceFilter()"> -->
             </div>
         </div>
         </div>
-          <div class="box text-center col-md-9 offset-md-3">
+          <div class="box text-center col-md-9 offset-md-3 border-0">
               <div class="row">
                   <div class="col-md-12 ">  <!-- offset-md-1 -->
                       <img src="{{CatCoverImage}}" style="width: 100%; height: 25vh">
@@ -105,7 +105,7 @@
               <!-- /.col-md-3-->
               <!-- *** LEFT COLUMN END ***-->
               <!-- *** RIGHT COLUMN ***-->
-              <div class="col-md-12">
+              <div class="col-md-12 p-0">
                   <div class="info-bar">
                       <div class="row">
                           <div class="col-lg-4 products-showing">Showing <strong>{{ totalItems == 0 ? 0 : showingItems}}</strong> of <strong>{{totalItems}}</strong> products</div>
@@ -169,9 +169,9 @@
                   </div>
                   </div>
                 </div> -->
-                  <div class="row products">
+                  <div class="row products" (*ngIf)="totalItems > 0">
 
-                    <div class="col-md-4 col-sm-6" *ngFor='let item4  of Item_Masters; let isFirst = firstl' (*ngIf)="totalItems > 0">
+                    <div class="col-md-4 col-sm-6" *ngFor='let item4  of Item_Masters; let isFirst = firstl'>
                       <div class="product" >
                           <div class="image">
                               <a href="#" data-toggle="modal" data-target="#product-quick-view-modal"><img src="/assets/img/img/No-Image.jpg" alt="" class="img-fluid image1"></a>
@@ -296,9 +296,13 @@
 
 
                   </div>
-                  <div class="text-center text-theme f-18" *ngIf="totalItems == 0">
-                    <span > {{noRecordFound}}</span>
-                  </div>
+                  <div class="info-bar" *ngIf="totalItems == 0">
+                    <div class="row">
+                      <div class="col-md-12 p-0 text-center text-theme f-18">
+                        <span> {{noRecordFound}}</span>
+                      </div>
+                    </div>
+                </div>
                   <!-- /.products-->
 
                   <nav aria-label="Page navigation example m-b-40" style="margin-bottom: 120px !important;" *ngIf="totalItems>0">
