--- a/src/app/clientside/clientpages/subcategory/subcategory.component.html
+++ b/src/app/clientside/clientpages/subcategory/subcategory.component.html
@@ -180,9 +180,9 @@
                           <!-- /.image-->
                           <div class="text">
                               <h3><a>{{item4.Item_Name}}</a></h3>
-                              <p class="card-text text-left  mb-0">Price: <span class="font-weight-bold float-right text-success">{{currency}}{{item4.Price}}</span></p>
+                              <p class="card-text text-left">Price: <span class="font-weight-bold float-right text-success">{{currency}}{{item4.Price}}</span></p>
 
-                              <p class="card-text text-left">Stock left: <span class="font-weight-bold float-right text-danger">{{item4.Qty}}</span></p>
+                              <!-- <p class="card-text text-left">Stock left: <span class="font-weight-bold float-right text-danger">{{item4.Qty}}</span></p> -->
 
                               <div class="F8dpS _3L1X9" *ngIf="item4.showaddbtn" (click)="toggleShow(item4)">
                                 <div  class="_1RPOp _1uN_a" (click)="addToCart(item4)" >ADD</div>
