--- a/src/app/clientside/clientpages/whishlist/whishlist.component.html
+++ b/src/app/clientside/clientpages/whishlist/whishlist.component.html
@@ -26,9 +26,9 @@
                               <!-- /.image-->
                               <div class="text">
                                   <h3><a>{{prod.Item_Name}}</a></h3>
-                                  <p class="card-text text-left  mb-0">Price: <span class="font-weight-bold float-right text-success">{{prod.Price}}</span></p>
+                                  <p class="card-text text-left">Price: <span class="font-weight-bold float-right text-success">{{prod.Price}}</span></p>
 
-                                 <p class="card-text text-left">Stock left: <span class="font-weight-bold float-right text-danger">{{prod.Qty}}</span></p>
+                                 <!-- <p class="card-text text-left">Stock left: <span class="font-weight-bold float-right text-danger">{{prod.Qty}}</span></p> -->
                               </div>
                               <div class="ribbon sale">
                                 <div class="theribbon">SALE</div>
