--- a/src/app/clientside/clientpages/landing_page/header/header.component.html
+++ b/src/app/clientside/clientpages/landing_page/header/header.component.html
@@ -27,7 +27,7 @@
                         <a [routerLink]="['/subcategory/', item1.RCatg_ID]" *ngFor='let item1  of item.rootcat' class="dropdown-item">{{item1.RCatg_Name}}<span class="badge badge-success">New</span></a>
                       </div>
                   </div>
-                  <div class="nav-item"><a href="contact.html" class="nav-link text-white">Contact</a></div>
+                  <!-- <div class="nav-item"><a href="contact.html" class="nav-link text-white">Contact</a></div> -->
                   <div class="nav-item dropdown normal-dropdown">
                     <a [routerLink]="['/custlogin']" class="nav-link text-white dropdown-toggle" aria-expanded="false" data-toggle="dropdown" aria-haspopup="true"><i class="icofont-lock ml-1"></i>{{username}}</a>
                     <div aria-labelledby="homeDropdown" class="dropdown-menu">
