--- a/src/styles.scss
+++ b/src/styles.scss
@@ -153,6 +153,9 @@
     cursor: not-allowed;
 }
 .cart-display .minicart-wrapmain{
+  opacity: 0;
+  transition: opacity 1s 0s;
+  display:none;
   position: absolute;
     top: 63px;
     right: 15px;
@@ -161,14 +164,14 @@
     /* border: 1px solid darkgrey; */
     box-shadow: 2px 2px 4px 0px #00000061;
     width: 45%;
-    // display:none;
-    opacity: 0;
-    transition: opacity 1s 0s;
+
+
 }
 .cart-display:hover .minicart-wrapmain{
-  // display:block;
+  transition: all 2s linear;
+  display:block;
   opacity: 1;
-  transition: opacity 0.5s;
+  // transition: opacity 0.5s;
 }
 .ui-slider-popup {
   position: absolute !important;
